css/editor.css
html {
	height:100%;
	box-sizing: border-box;
}

.wrapper {
	position: relative;
	min-height: 100%;
	max-width: 1050px;
	margin: 0 auto;
	padding:10px 20px;
}

*, *:before, *:after {
	box-sizing: inherit;
}

/* From http://pdenya.com/2013/08/08/vertical-space-in-bootstrap/ */
.voffset  { margin-top: 2px; }
.voffset1 { margin-top: 5px; }
.voffset2 { margin-top: 10px; }
.voffset3 { margin-top: 15px; }
.voffset4 { margin-top: 30px; }
.voffset5 { margin-top: 40px; }
.voffset6 { margin-top: 60px; }
.voffset7 { margin-top: 80px; }
.voffset8 { margin-top: 100px; }
.voffset9 { margin-top: 150px; }



.unsupported-browser {
	margin-top: 30px;
}

.unsupported-browser .panel-body {
	padding-top: 50px;
	padding-bottom: 60px;
}

.unsupported-browser .browser-link img {
	margin-right: 5px;
}

.unsupported-browser .frown-cloud {
	margin-top: 20px;
}



.input-area-wrapper .panel-body {
	padding-top: 0;
	padding-bottom: 0;
}

.input-area-wrapper .nav-pills .btn {
	padding-left: 10px;
	padding-right: 10px;
}

.CodeMirror {
	height:auto;
}

.CodeMirror-scroll {
	height:500px;
}

/*.output {
	width: 100%;
}*/

/*.code-runnable .code-input-area {
	border: solid 2px #999;
}*/
/*
.output-area.disabled {
	opacity: 0.5;
	outline: 2px solid #F00;
}
*/

.error-msg {
	padding:15px;
	margin: -15px -15px 0;
	font-size: 15px;
	line-height: 1.4;
	max-height: 200px;
	overflow-y: scroll;
	transition: all 0.2s;
	border: solid 5px transparent;
	margin-top: 15px;
	color: #999;
}

@media (min-height: 600px) {
	.error-msg {
		max-height: 350px;
	}
}

.error-msg pre {
	margin: 5px 30px 10px;
	color: #a33;
}

.error-msg hr {
	border: none;
	border-bottom: solid 1px rgba(200,100,100,0.3);
	height: 0;
}

.invalid-code .error-msg {
	background: rgba(255,200,100,0.5);
	border-color: #ff5722;
	color: #333;
	transition: all 1.5s;
}

.highlighted-code {
	transition: all 1.5s;
}

.invalid-code .highlighted-code {
	background: rgba(255,200,100,0.5);
	/*border-right: solid 5px #fd8;*/
	/*margin-right: -5px;*/
}


.code-saved-msg {
	color: #aaa;
	font-style: italic;
	padding: 10px;
	margin: 10px 10px;
	white-space: nowrap;
}

.code-saved-msg .not-word {
	display: none;
}

.code-not-saved {
	color: #caa;
}

.code-not-saved .not-word {
	display: inline;
}

.link {
	color: #940;
}
.link:hover {
	color: #d60;
}
.link.disabled {
	color: #ccc;
}

